
    * Turkish
      Enes Burhan KURAN <asd@gmail.com>

    * Vietnamese translation
      Clytie Siddall <clytie@riverland.net.au>

    * Zapoteco
      Rodrigo Perez Ramirez and Indigenas Sin Fronteras <isf_mx@yahoo.com>

  * Bug Fixes
    ---------
    * Starter and template filenames with non-lowercase extensions (e.g. .JPG)
      would fail to load.
      SF.net Bug #191

    * Image on right of dialogs would get scaled/cut-off even if there was
      room for them.

    * When using 'print delay' option, it would not allow printing the
      first time until the delay had passed.

    * Fixed error reporting when make_directory() fails.
      (Fixes spurious 
      SF.net Bug #2765872)
      John Popplewell <john@johnnypops.demon.co.uk>

    * Buffersize for holding Starter and image filenames was way too low.
      (Could crash with Starter images with very long filenames.)

    * Shape tool would only resize a shape if you dragged down or right,
      not up or left.
      (SF.net Bug #2834320)

    * tuxpaint-import tool uses BASHisms, so changed shebang to #!/bin/bash
      (instead of #!/bin/sh).

    * Added some missing examples to the default tuxpaint.conf file.
      (Thanks to Aapo Rantalainen <aapo.rantalainen@gmail.com>)

    * Default stamp size, in some situations, was very large
      (due to some rules that allowed stamps to be, at maximum,
      up to 2x width of the canvas, OR 2x height of the canvas, as long
      as it wasn't larger than the canvas in the other dimension).
      The stamp sizing buttons were unable to re-select that size.
      The sizing button bug has been fixed, the rule has been adjusted to
      allow a maximum overscan of 1.5x width-or-height, and if the maximum
      size causes overscan, then a smaller size is used for the default
      when the stamp is first used.
      (SF.net Bug #1668235)

    * Shapes tool now draws at mouse release to help painting with
      touchscreen devices.